--- a/SmartBar_r1/app/src/main/res/values/strings.xml
+++ b/SmartBar_r1/app/src/main/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="action_logout">Logout</string>
     <string name="action_pin">Get Pin</string>
     <string name="dismiss">Dismiss</string>
+    <string name="action_forgot_user">Forgot Username</string>
+    <string name="action_forgot_pass">Forgot Password</string>
 
 
 </resources>
